# boolean-circuits-mech-interp

./: .gitignore  README.md  parity_data.py  requirements.txt  setup.cfg  train_multitask_sparse_parity.py  train_simple_parity.py  train_simple_sparse_parity.py  utils.py
notebooks/: circuits_demo.ipynb
plots/: plot_hidden_act_regularisation.py  plot_sae_activation_combinations.py
scripts/: probe_XOR.py  probe_sparse_XOR.py  train_multitask_sparse_parity.py  train_simple_sparse_parity.py
src/boolean_circuits/: bool_data.py  circuits.py  models.py  parity_data.py  sae.py  utils.py
src/boolean_circuits/jax/: __init__.py  circuits.py  models.py  probes.py  train.py
src/boolean_circuits/jax/data/: __init__.py  bool_data.py  parity_data.py
src/boolean_circuits/jax/utils/: data.py  plotting.py
src/boolean_circuits/torch/: __init__.py  models.py
src/boolean_circuits/utils/: plotting.py
tests/: test_bool_data.py  test_circuits.py
