[metadata]
name = boolean_circuits
version = 0.1.0
author = GHD

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    jax
    numpy
    matplotlib
    flax
    optax


[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.2.3
    black>=21.5b1
    flake8>=3.9.1

[flake8]
max-line-length = 88
extend-ignore = E203
